--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,3 @@
-*
-{
-    margin: 0;
-    padding: 0;
-}
 
 html {
     background: transparent;
@@ -13,6 +8,8 @@ html {
 html, body {
     width: 100%;
     height: 100%;
+    padding: 0;
+    margin: 0;
     -webkit-user-select: none; /* Safari/iOS */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE/Edge */
@@ -52,6 +49,7 @@ html, body {
     right: 0;
     bottom: 0;
     display: none;
+    /*display: flex;*/
     align-items: center;
     justify-content: center;
     background: #000;
